2020.2/_sources/plugins/available/longitudinal/plot-feature-volatility.rst.txt
plot-feature-volatility: Plot longitudinal feature volatility and importances
=============================================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime longitudinal plot-feature-volatility [OPTIONS]

     Plots an interactive control chart of feature abundances (y-axis) in each
     sample across time (or state; x-axis). Feature importance scores and
     descriptive statistics for each feature are plotted in interactive bar
     charts below the control chart, facilitating exploration of longitudinal
     feature data. This visualization is intended for use with the feature-
     volatility pipeline; use that pipeline to access this visualization.

   Inputs:
     --i-table ARTIFACT FeatureTable[RelativeFrequency]
                            Feature table containing features found in
                            importances.                               [required]
     --i-importances ARTIFACT FeatureData[Importance]
                            Feature importance scores.                 [required]
   Parameters:
     --m-metadata-file METADATA...
       (multiple            Sample metadata file containing
        arguments will be   individual-id-column.
        merged)                                                        [required]
     --p-state-column TEXT  Metadata column containing state (time) variable
                            information.                               [required]
     --p-individual-id-column TEXT
                            Metadata column containing IDs for individual
                            subjects.                                  [optional]
     --p-default-group-column TEXT
                            The default metadata column on which to separate
                            groups for comparison (all categorical metadata
                            columns will be available in the visualization).
                                                                       [optional]
     --p-yscale TEXT Choices('linear', 'pow', 'sqrt', 'log')
                            y-axis scaling strategy to apply. [default: 'linear']
     --p-importance-threshold VALUE Float % Range(0, None,
       inclusive_start=False) | Str % Choices('q1', 'q2', 'q3')
                            Filter feature table to exclude any features with an
                            importance score less than this threshold. Set to
                            "q1", "q2", or "q3" to select the first, second, or
                            third quartile of values. Set to "None" to disable
                            this filter.                               [optional]
     --p-feature-count VALUE Int % Range(1, None) | Str % Choices('all')
                            Filter feature table to include top N most important
                            features. Set to "all" to include all features.
                                                                   [default: 100]
     --p-missing-samples TEXT Choices('error', 'ignore')
                            How to handle missing samples in metadata. "error"
                            will fail if missing samples are detected. "ignore"
                            will cause the feature table and metadata to be
                            filtered, so that only samples found in both files
                            are retained.                      [default: 'error']
   Outputs:
     --o-visualization VISUALIZATION
                                                                       [required]
   Miscellaneous:
     --output-dir PATH      Output unspecified results to a directory
     --verbose / --quiet    Display verbose output to stdout and/or stderr
                            during execution of this action. Or silence output if
                            execution is successful (silence is golden).
     --citations            Show citations and exit.
     --help                 Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.longitudinal.visualizers import plot_feature_volatility

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Plot longitudinal feature volatility and importances

   Plots an interactive control chart of feature abundances (y-axis) in each
   sample across time (or state; x-axis). Feature importance scores and
   descriptive statistics for each feature are plotted in interactive bar
   charts below the control chart, facilitating exploration of longitudinal
   feature data. This visualization is intended for use with the feature-
   volatility pipeline; use that pipeline to access this visualization.

   Parameters
   ----------
   table : FeatureTable[RelativeFrequency]
       Feature table containing features found in importances.
   importances : FeatureData[Importance]
       Feature importance scores.
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   state_column : Str
       Metadata column containing state (time) variable information.
   individual_id_column : Str, optional
       Metadata column containing IDs for individual subjects.
   default_group_column : Str, optional
       The default metadata column on which to separate groups for comparison
       (all categorical metadata columns will be available in the
       visualization).
   yscale : Str % Choices('linear', 'pow', 'sqrt', 'log'), optional
       y-axis scaling strategy to apply.
   importance_threshold : Float % Range(0, None, inclusive_start=False) | Str % Choices('q1', 'q2', 'q3'), optional
       Filter feature table to exclude any features with an importance score
       less than this threshold. Set to "q1", "q2", or "q3" to select the
       first, second, or third quartile of values. Set to "None" to disable
       this filter.
   feature_count : Int % Range(1, None) | Str % Choices('all'), optional
       Filter feature table to include top N most important features. Set to
       "all" to include all features.
   missing_samples : Str % Choices('error', 'ignore'), optional
       How to handle missing samples in metadata. "error" will fail if missing
       samples are detected. "ignore" will cause the feature table and
       metadata to be filtered, so that only samples found in both files are
       retained.

   Returns
   -------
   visualization : Visualization</pre>
       </div>
     </div>
   </div>